--- a/VerticalRollingTextView-library/build.gradle
+++ b/VerticalRollingTextView-library/build.gradle
@@ -17,6 +17,6 @@ publish {
     groupId = 'com.xiaosu'
     artifactId = 'VerticalRollingTextView'
     publishVersion = '1.1.0'
-    desc = '竖直方向无限循环滚动显示文本的控件'
-    website = 'https://github.com/shubowen/pullLayout'
+    desc = '竖直方向无限循环滚动显示单行文本的控件'
+    website = 'https://github.com/shubowen/VerticalRollingTextView'
 }
