--- a/VerticalRollingTextView-library/build.gradle
+++ b/VerticalRollingTextView-library/build.gradle
@@ -2,21 +2,26 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.2"
     }
 }
+
+dependencies {
+    provided 'com.android.support:appcompat-v7:25.3.1'
+}
+
 publish {
     userOrg = 'xiaosu'
     groupId = 'com.xiaosu'
     artifactId = 'VerticalRollingTextView'
-    publishVersion = '1.2.0'
+    publishVersion = '1.3.0'
     desc = '竖直方向无限循环滚动显示单行文本的控件'
     website = 'https://github.com/shubowen/VerticalRollingTextView'
 }
