--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.jakewharton:butterknife:8.8.1'
-    compile project(':VerticalRollingTextView-library')
+    compile project(':library')
 //    compile 'com.xiaosu:VerticalRollingTextView:1.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
